# imd-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
python_tests/: base.py  minimalreader.py  test_gromacs.py  test_imdclient.py  test_lammps.py  test_namd.py
src/: lib.rs  main.rs
