[package]
name = "imd-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name         = "imd"
crate-type   = ["cdylib"]
path         = "src/lib.rs" 

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
numpy = { version = "0.25" }
log = "0.4"
byteorder = "1.5"
crossbeam-channel = "0.5"
ndarray = { version = "0.16" }
ctrlc = { version ="3.4", features = ["termination"] }
env_logger = { version = "0.11"}