[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "imd-rs"
description = "IMD protocol implementation in Rust"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
features = ["python"]
module-name = "imdclient"